--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": ".",
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "react-error-overlay": "^6.0.9"
