--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "first-app",
+  "name": "reviews-course-work",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
     "express": "^4.18.2",
+    "react-router-hash-link": "^2.4.3",
     "vercel": "^29.2.0"
   },
   "scripts": {
